fix: Calendar getting cropped issue

--- a/apps/web-giddh/src/app/contact/contact.component.scss
+++ b/apps/web-giddh/src/app/contact/contact.component.scss
@@ -10,7 +10,9 @@
 .pd1 {
     padding: 5px;
 }
-
+.vendor-page {
+    overflow: visible;
+}
 .aging-table > tbody > tr input[type="checkbox"] {
     position: absolute !important;
     opacity: 0;
